After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653119 - Mageia has a check-pointer crash patch
Mageia has a check-pointer crash patch
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-21 17:50 UTC by Olav Vitters
Modified: 2011-08-03 15:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-shell-3.0.2-check-pointer.patch (4.99 KB, patch)
2011-06-21 17:50 UTC, Olav Vitters
none Details | Review
gnome-shell-3.0.2-check-pointer.patch (1.00 KB, patch)
2011-06-21 17:51 UTC, Olav Vitters
committed Details | Review

Description Olav Vitters 2011-06-21 17:50:13 UTC
Created attachment 190383 [details] [review]
gnome-shell-3.0.2-check-pointer.patch

I noticed Mageia has a patch to fix a certain crash. Not sure if needed, filing so you're aware and perhaps it can be applied.

Patch from:
http://svnweb.mageia.org/packages/cauldron/gnome-shell/current/SOURCES/
Comment 1 Olav Vitters 2011-06-21 17:51:41 UTC
Created attachment 190384 [details] [review]
gnome-shell-3.0.2-check-pointer.patch
Comment 2 Owen Taylor 2011-06-22 16:13:30 UTC
Patch is correct and makes sense to apply, I guess. They were clearly found because of some sort of automated check or added compiler warning since they won't *actually* help anything.

What they do is fix a clean null-pointer-dereference crash if a small memory allocation fails inside Xlib. But if you are failing small memory allocations, then GLib will abort soon after anyways.
Comment 3 Dan Winship 2011-08-03 15:14:55 UTC
committed and pushed