shell: fail cleanly if XFixesGetCursorImage fails

from Mageia, via Olav Vitters
https://bugzilla.gnome.org/show_bug.cgi?id=653119